[package]
name = "tokio-newrelic"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
description = "It is an wrapper over the newrelic SDK."
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
repository = "https://github.com/AbrarNitk/tokio-newrelic"
categories = ["api-bindings"]
keywords = ["newrelic-rust-sdk", "async-newrelic", "async-newrelic-database", "tokio-newrelic-database"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newrelic = "0.2"
lazy_static = "1"
antidote = "1.0.0"
sqlparser = "0.5.1"
r2d2 = "0.8.8"

diesel = { version = "1.4.5", features = ["r2d2", "chrono", "postgres"] }
r2d2-diesel = "1.0.0"

[dependencies.tokio]
version = "0.2.21"
features = ["rt-core", "rt-util", "time"]