[package]
name = "tokio_newrelic_macro"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
darling = "0.10.2"

[dependencies.tokio]
version = "0.2.21"
features = ["rt-core", "rt-util", "time"]